--- a/Calendar-page/pages/index/index.wxml
+++ b/Calendar-page/pages/index/index.wxml
@@ -1,3 +1,49 @@
 <!--index.wxml-->
-<calendar  calendar-style="calendar"  header-style="calendar-header"  board-style="calendar-board"
- days-color="{{dayStyle}}" weeks-type="cn" binddayClick="dayClick" />
+<wxs module="util">
+  var sub = function(val) {
+    return val.substring(11, 16)
+  }
+  module.exports.sub = sub;
+</wxs>
+<calendar  
+  calendar-style="calendar"  
+  header-style="calendar-header"  
+  board-style="calendar-board"
+  binddayClick="dayClick"
+  bindnextMonth="next"
+  bindprevMonth="prev"
+  days-color="{{dayStyle}}" 
+  weeks-type="cn" 
+  lunar=true
+  cell-size="40"
+   />
+
+<view class='listPart' >
+  <view class='listItem' wx:for="{{items}}" wx:key="{{index}}" wx:for-index="index" data-idx='{{index}}' wx:for-item="items" bindtap='eventDetail'>
+    <view class='scheduleNameList'>
+      {{items.eventName}}
+    </view>
+    <view class='listBody'>
+      <view class='block'></view>
+      <text>时间：{{util.sub(items.startTime)}} - {{util.sub(items.endTime)}}\n</text>
+    </view>
+  </view>
+</view>
+
+
+<view class='addSchedule'>
+  <button class='addSchedule' bindtap='addSchedule'>
+    <image src='../../images/add.png'></image>
+  </button>
+</view>
+
+
+<!-- <view class='box1' style='width: {{ sysW * 7 }}px'>
+  <view class='dateBox'>{{ year }} - {{ month}}</view>
+  <block wx:for='{{ weekArr }}'>
+    <view style='width: {{ sysW }}px; height: {{ sysW }}px; line-height: {{ sysW }}px;'>{{ item }}</view>
+  </block>
+  <block wx:for='{{ arr }}'>
+    <view style='{{ index == 0 ? "margin-left:" + sysW * marLet + "px;" : "" }}width: {{ sysW }}px; height: {{ sysW }}px; line-height: {{ sysW }}px;' class='{{ item ==  getDate ? "dateOn" : ""}}'>{{ item }}</view>
+  </block>
+</view> -->
