--- a/pages/createScheduleType/createScheduleType.wxss
+++ b/pages/createScheduleType/createScheduleType.wxss
@@ -37,6 +37,15 @@ page {
   border: 0;
 }
 
+.section1:last-child filed {
+  width:100%;
+  line-height:40px;
+  font-size:16px;
+  font-weight:bold;
+  color:#000;
+  padding-left:1%;
+}
+
 .field input {
   font-weight: normal;
 }
