--- a/pages/createSchedule/createSchedule.wxss
+++ b/pages/createSchedule/createSchedule.wxss
@@ -37,6 +37,7 @@ page {
   border: 0;
 }
 
+
 .field input {
   font-weight: normal;
 }
@@ -84,7 +85,7 @@ switch {
 
 textarea{
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   line-height: 25px;
   font-size: 16px;
   padding-left: 5px;
