--- a/pages/scheduleInfo/scheduleInfo.wxss
+++ b/pages/scheduleInfo/scheduleInfo.wxss
@@ -32,8 +32,23 @@ page {
   padding-left: 1%;
 }
 
+.field1 {
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+  color: #000;
+  border-bottom:1px solid rgb(234,234,234);
+  /* margin-bottom: 8px; */
+  padding-left: 1%;
+  padding-top: 8px;
+}
+
 .field:last-child {
   border: 0;
+}
+
+.hidden {
+  border-bottom:1px solid rgb(234,234,234);
 }
 
 .field input {
@@ -90,7 +105,8 @@ switch {
 
 textarea{
   width: 88%;
-  height: 100px;
+  margin-top:25px;
+  min-height: 100px;
   line-height: 25px;
   font-size: 16px;
   text-align:right;
